# avg-Chip-8-Emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cc
C/: chip8.h  main.c  make
C++/: chip8.cc  chip8.hh  main.cc  make
includes/: chip8.hh
src/: chip8.cc
